--- a/Native.Csharp.Frame-Final/Native.Csharp/packages.config
+++ b/Native.Csharp.Frame-Final/Native.Csharp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="1.6.2" targetFramework="net461" developmentDependency="true" />
+  <package id="CsvTools" version="1.0.12" targetFramework="net46" />
   <package id="Fody" version="2.5.0" targetFramework="net461" developmentDependency="true" />
   <package id="Funq" version="1.0.0" targetFramework="net461" />
   <package id="ini-parser" version="2.5.2" targetFramework="net461" />
