--- a/Native.Csharp.Frame-Final/Native.Csharp/Native.Csharp.csproj
+++ b/Native.Csharp.Frame-Final/Native.Csharp/Native.Csharp.csproj
@@ -136,6 +136,7 @@
     <Compile Include="App\Bot\ChatCheck\PlayerAPI\下载.cs" />
     <Compile Include="App\Bot\ChatCheck\PlayerAPI\鱼情.cs" />
     <Compile Include="App\Bot\GameAPI.cs" />
+    <Compile Include="App\Bot\Game\GameAPI.cs" />
     <Compile Include="App\Bot\LinkFinder.cs" />
     <Compile Include="App\Bot\Threading.cs" />
     <Compile Include="App\COCNet\CocCore.cs" />
@@ -227,6 +228,7 @@
     <Compile Include="App\GameData\Boss.cs" />
     <Compile Include="App\GameData\Enums.cs" />
     <Compile Include="App\GameData\GameMember.cs" />
+    <Compile Include="App\GameData\SharedData.cs" />
     <Compile Include="App\GameData\Weapon.cs" />
     <Compile Include="App\Setting.cs">
       <SubType>Form</SubType>
