--- a/QQBotXClashOfClans v2/QQBotXClashOfClans v2.csproj
+++ b/QQBotXClashOfClans v2/QQBotXClashOfClans v2.csproj
@@ -4,6 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>QQBotXClashOfClans_v2</RootNamespace>
+    <Version>2.0.0</Version>
+    <Copyright>MIT</Copyright>
+    <Authors>PoH98</Authors>
   </PropertyGroup>
 
   <ItemGroup>
