--- a/QQBotXClashOfClans v2/QQBotXClashOfClans v2.csproj
+++ b/QQBotXClashOfClans v2/QQBotXClashOfClans v2.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="ini-parser-netstandard" Version="2.5.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="SevenZip" Version="19.0.0" />
     <PackageReference Include="SkiaSharp" Version="2.80.2" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="5.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
